client/views/site/twitter/twitter.less
.twitter {
	.twitter-divider {
		text-align: center;
		color: white;
		font-size: 40px;
		padding-top: 20px;
		margin-bottom: -50px;
	}

	.carousel {
		.item {
			color: white;
			padding: 7%;
		}
	}
}

.carousel-control {
  // Toggles
  .btn-left,
  .btn-right{
    position: absolute;
    top: 40%;
    z-index: 5;
    display: inline-block;
    font-size: 25px;
  }
  .btn-left{
    left: 50%;
    margin-left: -10px;
  }
  .btn-right{
    right: 50%;
    margin-right: -10px;
  }
}

